# NavDRL

./: README.md  vis.rviz
data/: map.pgm
data/map1/: map.pgm  map.yaml
src/: simulate_env.py  test_velodyne_td3.py  train_velodyne_td3.py
src/svar_summercamp/: CMakeLists.txt  README.md
src/svar_summercamp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/svar_summercamp/install/summercamp/data/: C3.stl  map.pgm  map.yaml
src/svar_summercamp/install/summercamp/share/summercamp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/svar_summercamp/log/: latest_build
src/svar_summercamp/scripts/: simulate_env.py
src/svar_summercamp/src/: factors.h  gimage_adaptor.h  gslam.cpp  plicp.cpp  plicp.h  simulate.cpp  tinytf.cpp  tinytf.h  world.cpp
src/svar_summercamp/src/GSLAM/core/: Camera.h  FileResource.h  GImage.h  Glog.h  Messenger.h  Registry.h  Svar.h  Vocabulary.h
